# ai-code-comments

./: .gitignore  masterplan.md  my-patch.py  pyproject.toml  some-php-file-2.php  some-php-file.php  test-out.php  test-patch.diff  test_profiles.py
ai-backlog/done/: 250812__CHECKLIST__linear_backoff.md  250812__PLAN__linear_backoff.md  250822__PLAN__print_filename.md
ai_docs/: model_aliasing_plan.md
ai_docs/plans/: 250820__PLAN__Fix_Linear_Backoff_for_429_Errors.md  250822__PLAN__twig_support.md
aicoder/: .env.example  README.md  config.py  profiles.py
aicoder/cli/: main.py  patch.py  test_patcher_v3.py  util.py
aicoder/core/: processor.py
aicoder/llm/: api_client.py  helpers.py  prompts.py
aicoder/strategies/: base.py  searchreplace_strategy.py
aicoder/utils/: error_handler.py  output.py  patcher.py  patcher_v4.py
aicoder/validation/: ast_validator.py
compare-php-files/: compare-php-files.php  composer.json  test.sh
compare-php-files/src/: MyNodeVisitor.php  PhpCleaner.php
compare-php-files/test-files/: test2.php
compare-twig-files/: compare-twig-files.php  composer.json
compare-twig-files/src/: TwigAstComparator.php
config/: README.md  __TRASH__profiles.yaml  model-aliases.yaml  profiles.yaml
config/profiles/: analyzer-profiles.yaml  analyzer-prompts.yaml  commenter-profiles.yaml
phpcomment/: .env.example  README.md  config.py  profiles.py  requirements.txt
phpcomment/cli/: main.py  patch.py  test_patcher_v3.py
phpcomment/core/: code_modifier.py  docblock_generator.py  processor.py
phpcomment/llm/: api_client.py  helpers.py  prompts.py
phpcomment/strategies/: __init__.py  base.py  searchreplace_strategy.py  udiff_strategy.py  wholefile_strategy.py
phpcomment/utils/: error_handler.py  logger.py  output.py  patcher.py  patcher_v2.py  patcher_v3.py  patcher_v4.py
phpcomment/validation/: ast_validator.py
tests/: test_api_client_retries.py
(+8 files in other folders)
